--- a/index.html
+++ b/index.html
@@ -119,17 +119,24 @@
         <div id="project_1">
             <div class="in_project_1">
                <ul class="list">
-                   <li class="output">
-                       <div><img src="../마스크 그룹 1.png" width="100%" alt=""></div>
-                   </li>
-                   <li class="account">
-                       <h3>프로젝트명</h3>
-                       <p>작업기간</p>
-                       <p>작업요점</p>
-                       <p>사용기술</p>
-                       <a href="">코드보기</a>
-                       <a href="">결과물보기</a>
-                   </li>
+                <a href="#"><li class="pro1">
+                    <p>Front-end</p>
+                    <p>web page  renewal</p>
+                    <span>MMM</span>
+                    <p class="day">MAY</p>
+                    <p class="day">2022</p>
+                </li></a>
+                <li class="pro2">
+                    <p>HTML5</p>
+                    <p>CSS</p>
+                    <p>J-Query</p>
+                </li>
+                <a href="#"><li class="pro3"></li></a>
+                <li class="pro4"></li>
+                <a href="#"><li class="pro5"></li></a>
+                <li class="pro6"></li>
+                <a href="#"><li class="pro7"></li></a>
+                <li class="pro8"></li>
                </ul>
          
             </div>
@@ -145,7 +152,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Skill</a></li>
-            <li><a href="#">project1</a></li>
+            <li><a href="#">project</a></li>
             <li><a href="#">finish</a></li>
         </ul>
     </div>
