--- a/index.html
+++ b/index.html
@@ -35,22 +35,50 @@
         <div id="profile">
             <div class="in_profile">
                 <div class="p1">
-                    <p>About Me</p>
-                        <!-- <p class="p1_b"><img src="./images/blog.PNG" alt=""></p>
-                        <p><img src="./images/github.png" alt=""></p> -->
+                    <h2>ABOUT ME</h2>
                 </div>
                 <div class="p2">
-                    <h2>책임감을 가장 중요시 하는 유민성입니다</h2>
-                    <p>한국폴리텍대학에서 전공을 통해 C++, C# 등을 배웠습니다<br>
-                    졸업 후, 군대에서 진로를 고민하게 되었습니다.<br>
-                    코리아IT아카데미에서 프론트앤드 과정을 이수했고 백앤드 과정을 배울 예정입니다.<br>
-                    최근에는 노드JS와 리엑트에 관심이 생겨 공부하고 있는 중입니다.<br>
-                    사용자들 편리하게 사용할 웹을 만드는 웹 프로그래머가 되기 위해 노력중인 유민성입니다.<br></p>
+                    <div>
+                        <div class="p1_1">
+                            <ul>
+                                <li class="img"></li>
+                                <li class="name">
+                                    <p>유민성</p>
+                                    <p>YU MIN SEONG</p>
+                                </li>
+                                <li class="add">
+                                    <p>연락처</p>
+                                    <p>Email <span>dbalstjd789@daum.net</span></p>
+                                    <p>Blog <span>https://blog.naver.com/minsu1200</span></p>
+                                    <p>Github <span>https://github.com/yms2</span></p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="p1_2">
+                            <ul>
+                                <li class="intro">
+                                    <p>저는 궁금할때 어떻게든 해결하려고 하는 것을 좋아합니다.</p>
+                                    <p>이러한 성향이 개발이라는 직무와 잘 맞는다고 생각해 개발 직무에 도전하게 되었습니다.</p>
+                                </li>
+                                <li class="intro2">
+                                    <h3>개발자를 꿈꾸게 된 계기</h3>
+                                    <p>대학교에서 C++과 C#을 배우며 프로그램을 경험해 보았습니다.</p>
+                                    <p> 졸업 후 군대에서 개발직군으로 가기로 정해서 전역 후 도전하게 되었습니다.</p>
+                                </li>
+                                <li class="intro3">
+                                    <h3>개발자로의 여정</h3>
+                                    <p>전역 후 UI/UX 프론트앤드 개발자 4개월 과정을 거쳐 CSS HTML J-Query Java-Script를 학습했습니다.</p>
+                                    <p>추가로 REACT, NODE-JS 과 자바 기반 백앤드 개발자 과정을 배울 예정입니다.</p>
+                                    <p>저는 학원수업 이외에도 만들어보고자 하는 사이트를 만들고 있습니다.</p>
+                                    <p>또한. 깃허브와 블로그를 쓰며 하루하루 배운 내용을 공부하며 실력을 쌓아 나아갔습니다.</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="p1_3"></div>
+                    </div>
                 </div>
-                
             </div>
         </div>
-        <!-- <div id="archiving"></div> -->
         <!-- 스킬 -->
         <div id="skill">  
             <div class="in_skill">
@@ -154,7 +182,12 @@
         </div>
         <!-- 마무리 -->
         <div id="end">
-            <div class="in_end"></div>
+            <div class="in_end">
+                <ul>
+                    <li><h2>THANK YOU</h2></li>
+                    <li><p>매일 매일 성장하는 개발자 유민성입니다.</p></li>
+                </ul>
+            </div>
         </div>
     </div>
      <!-- 퀵메뉴 -->
