--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 <link rel="stylesheet" href="./reset.css">
 <link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./needpopup.css">
     <script src="js/jquery.js"></script>
 
 </head>
@@ -159,17 +160,24 @@
         <div id="project">
             <div class="in_project">
                <ul class="list">
-                <a href="javascript:showPopUp()"><li class="pro1">
+            <div class="airbnb popup_btn">
+                <a href="#" data-needpopup-show="#custom-popup1">
+                <li class="pro1">
                     <p>Front-end</p>
                     <p>web page renewal</p>
                     <span>MMM</span>
                     <p class="day">MAY</p>
                     <p class="day">2022</p>
                 </li></a>
+            </div>
+            <div class="needpopup" id="custom-popup1" data-needpopup-options="custom">
+                <IMG width="900" src="./images/mmm.png">  
+            </div>
                 <li class="pro2">
                     <p>HTML5</p>
                     <p>CSS</p>
                     <p>J-Query</p>
+                    <span>기존 매니지먼트 홈페이지에서 정보가 부족하다고 생각한 부분을 추가해 새롭게 리뉴얼한 사이트</span>
                 </li>
                 <a href="#"><li class="pro3"></li></a>
                 <li class="pro4"></li>                      
@@ -229,20 +237,21 @@
                 });
             });
         </script>
-        <script type="text/javascript">
-            function showPopUp(){
-
-                let width = 1000;
-                let height = 1500;
-
-                let left = (window.screen.width / 2) - (width/2)
-                let top = (window.screen.height / 4)
-
-                let windowStatus = 'width='+width+', height='+height+', left='+left+',top='+top+', scrollbars=yes, status=yes, resizable=yes titlory= yes'
-                const url = "https://yms2.github.io/MMM/main/"
-                
-                window.open(url,"hello popup",windowStatus)
-            }
         </script>
+        <SCRIPT src="./js/needpopup.min.js" type="text/javascript"></SCRIPT>
+     
+<SCRIPT>
+        needPopup.config.custom = {
+            'removerPlace': 'outside',
+            'closeOnOutside': false,
+            onShow: function () {
+                console.log('needPopup is shown');
+            },
+            onHide: function () {
+                console.log('needPopup is hidden');
+            }
+        };
+        needPopup.init();
+ </SCRIPT>
 </body>
 </html>
