--- a/index.html
+++ b/index.html
@@ -171,7 +171,11 @@
                 </li></a>
             </div>
             <div class="needpopup" id="custom-popup1" data-needpopup-options="custom">
-                <IMG width="900" src="./images/mmm.png">  
+                <img width="900" src="./images/mmm.png">  
+                <img width="900" src="./images/mmm1.PNG" alt="">
+                <img width="900" src="./images/mmm2.PNG" alt="">
+                <img width="900" src="./images/mmm3.PNG" alt="">
+                <img width="900" src="./images/mmm4.PNG" alt="">
             </div>
                 <li class="pro2">
                     <p>HTML5</p>
@@ -214,7 +218,6 @@
             function(){
             let	windowTop =$(window).scrollTop()+300;
             $("#q_mn").stop().animate({top:windowTop+"px" },500);
-            //$("#q_mn").stop().animate({속성:"속성값", 속성:"속성값" },1000);	
                 }
             );
         });
