--- a/index.html
+++ b/index.html
@@ -183,8 +183,16 @@
                     <p>J-Query</p>
                     <span>기존 매니지먼트 홈페이지에서 정보가 부족하다고 생각한 부분을 추가해 새롭게 리뉴얼한 사이트</span>
                 </li>
-                <a href="#"><li class="pro3"></li></a>
-                <li class="pro4"></li>                      
+                <a href="#"><li class="pro3">
+                    <p>Front-end</p>
+                    <p>REACT </p>
+                    <span>TodoList</span>
+                    <p class="day">July</p>
+                    <p class="day">2022</p>
+                </li></a>
+                <li class="pro4">
+                    <p>REACT</p>
+                </li>                      
                 <a href="#"><li class="pro5"></li></a>
                 <li class="pro6"></li>
                 <a href="#"><li class="pro7"></li></a>
