프로젝트 하나 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 <link rel="stylesheet" href="./reset.css">
 <link rel="stylesheet" href="./style.css">
-<link rel="stylesheet" href="./needpopup.css">
     <script src="js/jquery.js"></script>
 
 </head>
@@ -50,8 +49,8 @@
                                 <li class="add">
                                     <p>연락처</p>
                                     <p>Email <span>dbalstjd789@daum.net</span></p>
-                                    <p>Blog <span>https://blog.naver.com/minsu1200</span></p>
-                                    <p>Github <span>https://github.com/yms2</span></p>
+                                    <p>Blog <span><a href="https://blog.naver.com/minsu1200"> https://blog.naver.com/minsu1200</a></span></p>
+                                    <p>Github <span><a href="https://github.com/yms2">https://github.com/yms2</a></span></p>
                                 </li>
                             </ul>
                         </div>
@@ -161,7 +160,7 @@
             <div class="in_project">
                <ul class="list">
             <div class="airbnb popup_btn">
-                <a href="#" data-needpopup-show="#custom-popup1">
+                <a href="https://yms2.github.io/MMM/main"target ="_blank" >
                 <li class="pro1">
                     <p>Front-end</p>
                     <p>web page renewal</p>
@@ -170,20 +169,12 @@
                     <p class="day">2022</p>
                 </li></a>
             </div>
-            <div class="needpopup" id="custom-popup1" data-needpopup-options="custom">
-                <img width="900" src="./images/mmm.png">  
-                <img width="900" src="./images/mmm1.PNG" alt="">
-                <img width="900" src="./images/mmm2.PNG" alt="">
-                <img width="900" src="./images/mmm3.PNG" alt="">
-                <img width="900" src="./images/mmm4.PNG" alt="">
-            </div>
                 <li class="pro2">
                     <p>HTML5</p>
                     <p>CSS</p>
                     <p>J-Query</p>
-                    <span>기존 매니지먼트 홈페이지에서 정보가 부족하다고 생각한 부분을 추가해 새롭게 리뉴얼한 사이트</span>
                 </li>
-                <a href="#"><li class="pro3">
+                <a href="https://stunning-profiterole-f30a5a.netlify.app" target="_blank"><li class="pro3">
                     <p>Front-end</p>
                     <p>REACT </p>
                     <span>TodoList</span>
@@ -193,8 +184,20 @@
                 <li class="pro4">
                     <p>REACT</p>
                 </li>                      
-                <a href="#"><li class="pro5"></li></a>
-                <li class="pro6"></li>
+                <a href="https://yms2.github.io/shopping/"target="_blank"><li class="pro5">
+                    <p>Front-end</p>
+                    <p>HTML5</p>
+                    <p>CSS</p>
+                    <span>Shopping-Mall</span>
+                    <p class="day">July</p>
+                    <p class="day">2022</p>
+
+                </li></a>
+                <li class="pro6">
+                    <p>HTML5</p>
+                    <p>CSS</p>
+                    <p>JavaScript</p>
+                </li>
                 <a href="#"><li class="pro7"></li></a>
                 <li class="pro8"></li>
                </ul>
