--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <p>Front-End Developer</p>   
             </div>
             <div class="menu">
-                <p>ABOUT <a href="#">소개</a></p>
-                <p>PROJECT <a href="#">프로젝트</a></p>
-                <p>CONTACT <a href="#">연락처</a></p>
+                <p>ABOUT <button type="button" onclick="$('html,body').stop().animate({scrollTop:'970'})">소개</button></p>
+                <p>SKILLSET <button type="button" onclick="$('html,body').stop().animate({scrollTop:'1940'})">스킬리스트</button></p>
+                <p>PROJECT  <button type="button" onclick="$('html,body').stop().animate({scrollTop:'2910'})">프로젝트</button></p>
             </div>
         </div>
         <!-- 소개 -->
@@ -49,8 +49,8 @@
                                 <li class="add">
                                     <p>연락처</p>
                                     <p>Email <span>dbalstjd789@daum.net</span></p>
-                                    <p>Blog <span><a href="https://blog.naver.com/minsu1200"> https://blog.naver.com/minsu1200</a></span></p>
-                                    <p>Github <span><a href="https://github.com/yms2">https://github.com/yms2</a></span></p>
+                                    <p>Blog <span><a href="https://blog.naver.com/minsu1200" target="_blank"> https://blog.naver.com/minsu1200</a></span></p>
+                                    <p>Github <span><a href="https://github.com/yms2" target="_blank">https://github.com/yms2</a></span></p>
                                 </li>
                             </ul>
                         </div>
@@ -64,11 +64,12 @@
                                     <h3>개발자를 꿈꾸게 된 계기</h3>
                                     <p>대학교에서 C++과 C#을 배우며 프로그램을 경험해 보았습니다.</p>
                                     <p> 졸업 후 군대에서 개발직군으로 가기로 정해서 전역 후 도전하게 되었습니다.</p>
+                                    <p>공부를 해 본 결과 조금씩 알아가는 것이 재미있어서 지금까지 하고있습니다.</p>
                                 </li>
                                 <li class="intro3">
                                     <h3>개발자로의 여정</h3>
                                     <p>전역 후 UI/UX 프론트앤드 개발자 4개월 과정을 거쳐 CSS HTML J-Query Java-Script를 학습했습니다.</p>
-                                    <p>추가로 REACT, NODE-JS 과 자바 기반 백앤드 개발자 과정을 배울 예정입니다.</p>
+                                    <p> 자바 기반 백앤드 개발자 과정을 배우고 있습니다. React도 조금씩 공부하고 있습니다.</p>
                                     <p>저는 학원수업 이외에도 만들어보고자 하는 사이트를 만들고 있습니다.</p>
                                     <p>또한. 깃허브와 블로그를 쓰며 하루하루 배운 내용을 공부하며 실력을 쌓아 나아갔습니다.</p>
                                 </li>
@@ -170,8 +171,8 @@
                 </li></a>
             </div>
                 <li class="pro2">
-                    <p>HTML5</p>
-                    <p>CSS</p>
+                    <p>HTML5,CSS</p>
+                    <p>반응형</p>
                     <p>J-Query</p>
                 </li>
                 <a href="https://stunning-profiterole-f30a5a.netlify.app" target="_blank"><li class="pro3">
